Fixed a couple of Tooltips issues on Firefox

--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -28,6 +28,7 @@
 .tooltip-content {
   color: var(--tooltip-text-color)!important;
   background-color: var(--selection-color)!important;
+  display: block;
   z-index: 503;
   position: fixed;
   bottom: unset;
